issue MIGRATION-77 - Clear all pages from the horizontal scrolling

--- a/ecos-citeckTheme-share/src/main/amp/web/themes/citeckTheme/presentation.css
+++ b/ecos-citeckTheme-share/src/main/amp/web/themes/citeckTheme/presentation.css
@@ -1757,6 +1757,9 @@ body.alfresco-guest
 }
 
 /** Share component overrides */
+#Share #share-header {
+    margin: 0;
+}
 
 .header .header-left
 {
@@ -2594,10 +2597,14 @@ table td.thumbnail img
    border: none; 
 }
 
+.share-form .form-container .caption {
+    left: 855px;
+    width: auto;
+}
+
 @media (min-width: 1010px) {
    .share-form .form-container .caption {
      position: absolute;
-     left: 840px;
      text-align: left;
    }
 }
